syntax = "proto3";
package relapse_proto;

message Capture {
	int64 CaptureID = 1;
	string AppName = 2;
	string WindowTitle = 3;
	string Filepath = 4;
	string Fullpath = 5;
	int64 CaptureTimeSeconds = 6;
	int64 CaptureDayTimeSeconds = 7;
}

message DayRequest {
  int64 CaptureDayTimeSeconds = 1;
}

message DayResponse {
  int64 CaptureDayTimeSeconds = 1;
  repeated Capture Captures = 2;
}

message StartRequest {}
message StartResponse {}
message StopRequest {}
message StopResponse {}

service Relapse {
  rpc GetCapturesForADay(DayRequest) returns (DayResponse) {}
  rpc StartCapture(StartRequest) returns (StartResponse) {}
  rpc StopCapture(StopRequest) returns (StopResponse) {}
}